# blog-api

./: .gitignore  Dockerfile  deployment.yaml  pyproject.toml  service.yaml
.codesandbox/: tasks.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py
app/models/: post.py  type.py
app/routes/: __init__.py  posts.py  types.py
