[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Nanda <nandakrishnak1999@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
pymongo = "^4.3.2"
motor = "^3.1.1"
flake8 = "^5.0.4"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
